<resources>
    <string name="appname">BMI Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="text_welcome">Welcome to the BMI Calculator</string>
    <string name="text_height">Please Enter your Height in feet and inches </string>
    <string name="edit_feet">feet</string>
    <string name="text_weight">And enter your weight in pounds</string>
    <string name="edit_inches">inches</string>
    <string name="edit_pounds">pounds</string>
    <string name="button_calculate_bmi">Calculate BMI</string>
    <string name="text_result">Result: </string>
</resources>
